--- a/teams.html
+++ b/teams.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <link rel="stylesheet" href="/static/css/app.css">
-    <link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/14caed6bdc.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <title>IPL</title>
+    <title>IPL - Teams</title>
 </head>
 <body>
     <!-- HEADER -->
     <header>
-        <!-- <img class="ipl-logo" src="/static/images/favicon.png" alt="ipl logo"> -->
-        <h1 class="title">indian premier league 2020</h1>
+        <h1 class="title">indian premier league 2020</h1>   
     </header>
     <!-- NAVIGATION -->
     <nav class="navigation">
@@ -45,14 +43,32 @@
                 <img src="/static/images/ipl_logo.png" alt="ipl logo">
             </figure>  
         </section>
-        <section class="section-2">
-            
-            <figure>
-                <img class="cover-img" src="/static/images/last_season_winner.jpg" alt="last season winner">
-                <figcaption>
-                    <h2 class="heading-2">ipl 2019 champions mumbai indians</h2>
-                </figcaption>
-            </figure>
+        <!-- TEAMS SECTION -->
+        <section class="teams">
+            <h2 class="heading-2">Teams</h2>
+            <div class="team-group">
+                <div class="team-item csk"> 
+                    <img title="Chennai Super Kings" src="/static/images/csk.png" alt="">
+                </div>
+                <div class="team-item dc"> 
+                    <img src="/static/images/dc.png" alt="">
+                </div>
+                <div class="team-item kep"> 
+                    <img src="/static/images/kep.png" alt="">
+                </div>
+                <div class="team-item kkr"> 
+                    <img src="/static/images/kkr.png" alt="">
+                </div>
+                <div class="team-item mi"> 
+                    <img src="/static/images/mi.png" alt="">
+                </div>
+                <div class="team-item rr"> 
+                    <img src="/static/images/rr.png" alt="">
+                </div>
+                <div class="team-item srh"> 
+                    <img src="/static/images/shr.png" alt="">
+                </div>
+            </div>
         </section>
     </main>
     <!-- FOOTER  -->
@@ -69,7 +85,6 @@
             <i class="fab fa-twitter"></i>
         </section>
     </footer>
-    <div class="demo">asdsadsadasd</div>
     <script src="/static/js/script.js"></script>
 </body>
 </html>
