--- a/venues.html
+++ b/venues.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <link rel="stylesheet" href="/static/css/app.css">
-    <link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/14caed6bdc.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <title>IPL</title>
+    <title>IPL - Venues</title>
 </head>
 <body>
     <!-- HEADER -->
     <header>
-        <!-- <img class="ipl-logo" src="/static/images/favicon.png" alt="ipl logo"> -->
-        <h1 class="title">indian premier league 2020</h1>
+        <h1 class="title">indian premier league 2020</h1>    
     </header>
     <!-- NAVIGATION -->
     <nav class="navigation">
@@ -45,21 +43,41 @@
                 <img src="/static/images/ipl_logo.png" alt="ipl logo">
             </figure>  
         </section>
-        <section class="section-2">
-            
-            <figure>
-                <img class="cover-img" src="/static/images/last_season_winner.jpg" alt="last season winner">
-                <figcaption>
-                    <h2 class="heading-2">ipl 2019 champions mumbai indians</h2>
-                </figcaption>
-            </figure>
+        <section class="venues">
+            <h2 class="heading-2">Venues</h2>
+            <div class="venue-group">
+                <div class="venue-item">
+                    <img src="/static/images/wankhade.webp" alt="venue">
+                    <h3>Wankhade Stadium, Mumbai</h3>
+                </div>
+                <div class="venue-item">
+                    <img src="/static/images/mohali.jpg" alt="venue">
+                    <h3>PCA Stadium, Mohali</h3>
+                </div>
+                <div class="venue-item">
+                    <img src="/static/images/mchinnaswamin.jpg" alt="venue">
+                    <h3>M chinnaswami Stadium, Banglore</h3>
+                </div>
+                <div class="venue-item">
+                    <img src="/static/images/jaipur.jpg" alt="venue">
+                    <h3>Swaymansingh Stadium, Jaipur</h3>
+                </div>
+                <div class="venue-item">
+                    <img src="/static/images/edengarden.jpg" alt="venue">
+                    <h3>Eden Garden, Kolkatta</h3>
+                </div>
+                <div class="venue-item">
+                    <img src="/static/images/delhi.jpg" alt="venue">
+                    <h3>Ferozshah Kotla, Delhi</h3>
+                </div>
+            </div>
         </section>
     </main>
     <!-- FOOTER  -->
     <footer>
         <section class="copyright">
             <h3>copyright &copy; 2020</h3>
-            <h4>all rights reserved by Zuber Shekh</h4>
+            <h4>all right reserved by Zuber Shekh</h4>
         </section>
         <section class="social-icons">
             <h3>follow us on</h3>
@@ -69,7 +87,6 @@
             <i class="fab fa-twitter"></i>
         </section>
     </footer>
-    <div class="demo">asdsadsadasd</div>
     <script src="/static/js/script.js"></script>
 </body>
 </html>
