--- a/gallery.html
+++ b/gallery.html
@@ -5,17 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <link rel="stylesheet" href="/static/css/app.css">
-    <link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/14caed6bdc.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <title>IPL</title>
+    <title>IPL - Gallery</title>
 </head>
 <body>
     <!-- HEADER -->
     <header>
-        <!-- <img class="ipl-logo" src="/static/images/favicon.png" alt="ipl logo"> -->
-        <h1 class="title">indian premier league 2020</h1>
-    </header>
+        <h1 class="title">indian premier league 2020</h1>    </header>
     <!-- NAVIGATION -->
     <nav class="navigation">
         <div class="buttons">
@@ -45,21 +42,29 @@
                 <img src="/static/images/ipl_logo.png" alt="ipl logo">
             </figure>  
         </section>
-        <section class="section-2">
-            
-            <figure>
-                <img class="cover-img" src="/static/images/last_season_winner.jpg" alt="last season winner">
-                <figcaption>
-                    <h2 class="heading-2">ipl 2019 champions mumbai indians</h2>
-                </figcaption>
-            </figure>
+        <section class="gallery">
+            <h2 class="heading-2">Gallery</h2>
+            <div class="gallery-group">
+                <figure>
+                    <img src="/static/images/gallery1.jpg" alt="" srcset="">
+                    <img src="/static/images/gallery2.jpg" alt="" srcset="">
+                    <img src="/static/images/gallery3.jpg" alt="" srcset="">
+                    <img src="/static/images/gallery4.jpg" alt="" srcset="">
+                    <img src="/static/images/gallery5.jpeg" alt="" srcset="">
+                    <img src="/static/images/gallery6.jpg" alt="" srcset="">
+                    <img src="/static/images/gallery7.jpg" alt="" srcset="">
+                    <img src="/static/images/gallery8.jpeg" alt="" srcset="">
+                    <img src="/static/images/gallery9.jpeg" alt="" srcset="">
+                    <img src="/static/images/gallery10.jpg" alt="" srcset="">
+                </figure>
+            </div>
         </section>
     </main>
     <!-- FOOTER  -->
     <footer>
         <section class="copyright">
             <h3>copyright &copy; 2020</h3>
-            <h4>all rights reserved by Zuber Shekh</h4>
+            <h4>all right reserved by Zuber Shekh</h4>
         </section>
         <section class="social-icons">
             <h3>follow us on</h3>
@@ -69,7 +74,6 @@
             <i class="fab fa-twitter"></i>
         </section>
     </footer>
-    <div class="demo">asdsadsadasd</div>
     <script src="/static/js/script.js"></script>
 </body>
 </html>
